Update web phase stories

--- a/2018/December/19.md
+++ b/2018/December/19.md
@@ -1,7 +1,8 @@
 #### ToDos
-[] Go through Qa Passed stories
-[] Jira ticket for new tasks
-[] Deliver https://www.pivotaltracker.com/story/show/162719728
-[] Address salil comment on https://www.pivotaltracker.com/story/show/162715026
-[] https://www.pivotaltracker.com/story/show/162719882
-[] https://www.pivotaltracker.com/story/show/162724415
+[ ] Go through Qa Passed stories
+[ ] Jira ticket for new tasks
+[ ] Deliver https://www.pivotaltracker.com/story/show/162719728
+[ ] Address salil comment on https://www.pivotaltracker.com/story/show/162715026
+[ ] https://www.pivotaltracker.com/story/show/162719882
+[ ] https://www.pivotaltracker.com/story/show/162724415
+[ ] Review Tiago PR
