Task Completed: Go through Qa Passed stories

--- a/2018/December/19.md
+++ b/2018/December/19.md
@@ -1,5 +1,5 @@
 #### ToDos
-[ ] Go through Qa Passed stories
+[x] Go through Qa Passed stories
 [ ] Jira ticket for new tasks
 [ ] Deliver https://www.pivotaltracker.com/story/show/162719728
 [ ] Address salil comment on https://www.pivotaltracker.com/story/show/162715026
