--- a/2018/December/19.md
+++ b/2018/December/19.md
@@ -1,8 +1,17 @@
 #### ToDos
-[x] Go through Qa Passed stories
-[ ] Jira ticket for new tasks
-[ ] Deliver https://www.pivotaltracker.com/story/show/162719728
-[ ] Address salil comment on https://www.pivotaltracker.com/story/show/162715026
-[ ] https://www.pivotaltracker.com/story/show/162719882
-[ ] https://www.pivotaltracker.com/story/show/162724415
-[ ] Review Tiago PR
+- [x] Go through Qa Passed stories
+- [x] Jira ticket for new tasks
+- [ ] Small Fixes
+  - [x] [Ability to uncheck option on inspection form item](https://www.pivotaltracker.com/story/show/162719728)
+  - [x] Address salil comment on to [avoid decimals on PF counter](https://www.pivotaltracker.com/story/show/162715026)
+  - [x] [Avoid page reload on hitting enter on comment](https://www.pivotaltracker.com/story/show/162719882)
+  - [x] [Change + - position on PF counter to match zamrin app](https://www.pivotaltracker.com/story/show/162724415)
+  - [x] [No error / notification for incorrect login info](https://www.pivotaltracker.com/story/show/162719794)
+  - [x] Submit PRs
+    - [ ] https://github.com/SiteDocsSafetyCorp/sitedocs-online-forms/pull/16
+    - [ ] https://github.com/SiteDocsSafetyCorp/sitedocs-online-forms/pull/15
+    - [ ] https://github.com/SiteDocsSafetyCorp/sitedocs-online-forms/pull/17
+    - [ ] https://github.com/SiteDocsSafetyCorp/sitedocs-online-forms/pull/18
+  - [ ] Deliver above tickets to QA
+- [x] Review Tiago PR
+- [ ] Mark tickets done on Jira
