--- a/2018/December/20.md
+++ b/2018/December/20.md
@@ -1,5 +1,5 @@
 #### ToDos
-- [ ] Talk to Tiago about Open source
+- [x] Talk to Tiago about Open source
 - [x] Deliver Tickets
   - [x] [Ability to uncheck option on inspection form item](https://www.pivotaltracker.com/story/show/162719728)
   - [x] Address salil comment on to [avoid decimals on PF counter](https://www.pivotaltracker.com/story/show/162715026)
@@ -12,7 +12,7 @@
   - [x] [Form item with just numbers in name is not displayed properly in the react app](https://www.pivotaltracker.com/story/show/162770537)
   - [x] [User should not be able to enter/edit GPS coordinates manually](https://www.pivotaltracker.com/story/show/162719671)
   - [x] [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
-  - [x] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
-    - Yet to be delivered
+  - [ ] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
+    - Yet to be delivered (waiting for review)
 - [x] Update Jira
 - [x] Review Tiago PRs
