Ready for standup

--- a/2018/December/21.md
+++ b/2018/December/21.md
@@ -1,10 +1,10 @@
 #### ToDos
 
 - [ ] Address salil comment - [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215/comments/197843465)
-- [ ] Deliver [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
 - [ ] Discuss this with Muhammad [manually entering pass/fail counter value covert the number to max 999 if 4rth digit is entered](https://www.pivotaltracker.com/story/show/162804618)
-- [ ] Discuss this with Tiago [Cannot edit comments added to a photo (if the photo is annotated)](https://www.pivotaltracker.com/story/show/162775495)
+- [x] Discuss this with Tiago [Cannot edit comments added to a photo (if the photo is annotated)](https://www.pivotaltracker.com/story/show/162775495)
 - [ ] Deliver Stories
+  - [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
   - [ ] [user can not reset the date and time to null once select a value](https://www.pivotaltracker.com/story/show/162805422)
   - [ ] [Worker list in select worker items is not sorted](https://www.pivotaltracker.com/story/show/162720254)
   - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
