--- a/2018/December/21.md
+++ b/2018/December/21.md
@@ -1,14 +1,16 @@
 #### ToDos
 
-- [ ] Address salil comment - [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215/comments/197843465)
-- [ ] Discuss this with Muhammad [manually entering pass/fail counter value covert the number to max 999 if 4rth digit is entered](https://www.pivotaltracker.com/story/show/162804618)
+- [x] Address salil comment - [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215/comments/197843465)
+- [x] Discuss this with Muhammad [manually entering pass/fail counter value covert the number to max 999 if 4rth digit is entered](https://www.pivotaltracker.com/story/show/162804618)
 - [x] Discuss this with Tiago [Cannot edit comments added to a photo (if the photo is annotated)](https://www.pivotaltracker.com/story/show/162775495)
-- [ ] Deliver Stories
-  - [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
-  - [ ] [user can not reset the date and time to null once select a value](https://www.pivotaltracker.com/story/show/162805422)
-  - [ ] [Worker list in select worker items is not sorted](https://www.pivotaltracker.com/story/show/162720254)
-  - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
+- [ ] Develop Stories
+  - [x] [manually entering pass/fail counter value covert the number to max 999 if 4rth digit is entered](https://www.pivotaltracker.com/story/show/162804618)
+  - [x] [user can not reset the date and time to null once select a value](https://www.pivotaltracker.com/story/show/162805422)
+  - [x] [Worker list in select worker items is not sorted](https://www.pivotaltracker.com/story/show/162720254)
+  - [x] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
   - [ ] [user can submit form with image item using `web forms`]
   (https://www.pivotaltracker.com/story/show/162764412)
-- [ ] Review Tiago PRs
-- [ ] Update Jira
+- [ ] Waiting for review
+  - [ ] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
+- [x] Review Tiago PRs
+- [x] Update Jira
