Prep for standup

--- a/2018/December/24.md
+++ b/2018/December/24.md
@@ -5,12 +5,14 @@
   - [x] [user can not reset the date and time to null once select a value](https://www.pivotaltracker.com/story/show/162805422)
   - [x] [Worker list in select worker items is not sorted](https://www.pivotaltracker.com/story/show/162720254)
   - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
-- [ ] Develop
-  - [ ] there is no way to enter new line in comments(https://www.pivotaltracker.com/story/show/162804849)
-  - [ ] value of pass fail counter should not go to null/empty
+- [ ] Develop/Fix
+  - [x] there is no way to enter new line in comments(https://www.pivotaltracker.com/story/show/162804849)
+  - [x] value of pass fail counter should not go to null/empty
   (https://www.pivotaltracker.com/story/show/162804677)
-  - [ ] show current date [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
-  - [ ] [user can submit form with image item using `web forms`]
+  - [x] show current date [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
+  - [x] [user can submit form with image item using `web forms`]
   (https://www.pivotaltracker.com/story/show/162764412)
-- Review Tiago PR
-- Update JIRA
+  - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
+- [x] check dates passed to api
+- [ ] Review Tiago PR
+- [ ] Update JIRA
