Prep for standup

--- a/2018/December/24.md
+++ b/2018/December/24.md
@@ -14,5 +14,5 @@
   (https://www.pivotaltracker.com/story/show/162764412)
   - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
 - [x] check dates passed to api
-- [ ] Review Tiago PR
-- [ ] Update JIRA
+- [x] Review Tiago PR (0)
+- [x] Update JIRA
