--- a/2018/December/25.md
+++ b/2018/December/25.md
@@ -3,14 +3,13 @@
 - [ ] Waiting for review
   - [ ] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
   - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
-  - [ ] there is no way to enter new line in comments(https://www.pivotaltracker.com/story/show/162804849)
-  - [ ] value of pass fail counter should not go to null/empty
+  - [ ] [there is no way to enter new line in comments](https://www.pivotaltracker.com/story/show/162804849)
+  - [ ] [value of pass fail counter should not go to null/empty]
   (https://www.pivotaltracker.com/story/show/162804677)
-  - [ ] show current date [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
-  - [ ] [user can submit form with image item using `web forms`]
-  (https://www.pivotaltracker.com/story/show/162764412)
+  - [ ] show current date for [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
+  - [ ] [user can submit form with image item using `web forms`](https://www.pivotaltracker.com/story/show/162764412)
   - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
-- Develop/Fix
+- [ ] Develop/Fix
   - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
 - [ ] Unit Tests
   - [ ] Actions
