--- a/2018/December/24.md
+++ b/2018/December/24.md
@@ -6,12 +6,11 @@
   - [x] [Worker list in select worker items is not sorted](https://www.pivotaltracker.com/story/show/162720254)
   - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
 - [ ] Develop/Fix
-  - [x] there is no way to enter new line in comments(https://www.pivotaltracker.com/story/show/162804849)
-  - [x] value of pass fail counter should not go to null/empty
+  - [x] [there is no way to enter new line in comments](https://www.pivotaltracker.com/story/show/162804849)
+  - [x] [value of pass fail counter should not go to null/empty]
   (https://www.pivotaltracker.com/story/show/162804677)
   - [x] show current date [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
-  - [x] [user can submit form with image item using `web forms`]
-  (https://www.pivotaltracker.com/story/show/162764412)
+  - [x] [user can submit form with image item using `web forms`](https://www.pivotaltracker.com/story/show/162764412)
   - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
 - [x] check dates passed to api
 - [x] Review Tiago PR (1)
