--- a/2018/December/25.md
+++ b/2018/December/25.md
@@ -3,18 +3,18 @@
 - [ ] Waiting for review
   - [ ] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
   - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
-  - [ ] [there is no way to enter new line in comments](https://www.pivotaltracker.com/story/show/162804849)
-  - [ ] [value of pass fail counter should not go to null/empty]
-  (https://www.pivotaltracker.com/story/show/162804677)
-  - [ ] show current date for [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
+  - [x] [there is no way to enter new line in comments](https://www.pivotaltracker.com/story/show/162804849)
+  - [x] [value of pass fail counter should not go to null/empty](https://www.pivotaltracker.com/story/show/162804677)
+  - [x] show current date for [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
   - [ ] [user can submit form with image item using `web forms`](https://www.pivotaltracker.com/story/show/162764412)
+    - [x] Address Comments
   - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
 - [ ] Develop/Fix
-  - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
+  - [x] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
 - [ ] Unit Tests
   - [ ] Actions
   - [ ] api
   - [ ] components
 - [ ] [Discuss Salil comment on sort worker list](https://www.pivotaltracker.com/n/projects/1903295/stories/162720254/comments/197900960)
-- [ ] Review Tiago PR
+- [ ] Review Tiago PR (1)
 - [ ] Update JIRA
