--- a/2018/December/26.md
+++ b/2018/December/26.md
@@ -1,28 +1,35 @@
 #### Todos
 
-- [ ] Waiting for review
-  - [ ] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826)
-  - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
+- [ ] Address review
   - [x] [there is no way to enter new line in comments](https://www.pivotaltracker.com/story/show/162804849)
   - [x] [value of pass fail counter should not go to null/empty](https://www.pivotaltracker.com/story/show/162804677)
   - [x] show current date for [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
   - [ ] [user can submit form with image item using `web forms`](https://www.pivotaltracker.com/story/show/162764412)
     - [x] Address Comments
+    - [ ] Merge & Deploy
   - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
-- [ ] Develop/Fix
-  - [x] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
-  - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
+    - [ ] Address Comments
+    - [ ] Merge & Deploy
+  - [ ] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826) 
+    - [ ] Merge & Deploy
+  - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
+    - [ ] Address comments
+    - [ ] Merge & Deploy
+  - [] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
+    - [ ] Address comments
+    - [ ] Merge & Deploy
   - [x] Show clear button next to Date and Time form items
     - [ ] Once merged in development, leave comment for Muhammad to test
+    - [ ] Address comments
+    - [ ] Merge & Deploy
   - [x] Address worker list sorting salil comment
     - [ ] `Workers assigned to the location should be listed first` Under discussion
     - [ ] Once merged in development, leave comment for salil to test
+    - [ ] Address comments
+    - [ ] Merge & Deploy
+- Develop/Fix
+  - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
   - [ ] [form is not refreshed to load new template on clicking new from](https://www.pivotaltracker.com/n/projects/1903295/stories/162804788)
   - [ ] Refactor `<Template/>` Component
-- [ ] Unit Tests
-  - [ ] Actions
-  - [ ] api
-  - [ ] components
-- [ ] [Discuss Salil comment on sort worker list](https://www.pivotaltracker.com/n/projects/1903295/stories/162720254/comments/197900960)
-- [ ] Review Tiago PR (1)
+- [ ] Review Tiago PR ()
 - [ ] Update JIRA
