--- a/2018/December/27.md
+++ b/2018/December/27.md
@@ -1,34 +1,34 @@
 #### Todos
 
-- [ ] Address review
+- [x] Address review
   - [x] [there is no way to enter new line in comments](https://www.pivotaltracker.com/story/show/162804849)
   - [x] [value of pass fail counter should not go to null/empty](https://www.pivotaltracker.com/story/show/162804677)
   - [x] show current date for [Info section of form to show date & time](https://www.pivotaltracker.com/story/show/162769215)
-  - [ ] [user can submit form with image item using `web forms`](https://www.pivotaltracker.com/story/show/162764412)
+  - [x] [user can submit form with image item using `web forms`](https://www.pivotaltracker.com/story/show/162764412)
     - [x] Address Comments
-    - [ ] Merge & Deploy
-  - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
-    - [ ] Address Comments
-    - [ ] Merge & Deploy
-  - [ ] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826) 
-    - [ ] Merge & Deploy
-  - [ ] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
-    - [ ] Address comments
-    - [ ] Merge & Deploy
-  - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
-    - [ ] Address comments
-    - [ ] Merge & Deploy
+    - [x] Merge & Deploy
+  - [x] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
+    - [x] Address Comments
+    - [x] Merge & Deploy
+    - [x] Address QA comments
+  - [x] [Stop the user from toggling the comments box after comments are added](https://www.pivotaltracker.com/story/show/162719826) 
+    - [x] Merge & Deploy
+  - [x] [Show actual company name in form header](https://www.pivotaltracker.com/story/show/162719873)
+    - [x] Address comments
+    - [x] Merge & Deploy
   - [x] Show clear button next to Date and Time form items
-    - [ ] Once merged in development, leave comment for Muhammad to test
-    - [ ] Address comments
-    - [ ] Merge & Deploy
+    - [x] Once merged in development, leave comment for Muhammad to test
+    - [x] Address comments
+    - [x] Merge & Deploy
+    - [x] Address QA Comments
   - [x] Address worker list sorting salil comment
-    - [ ] `Workers assigned to the location should be listed first` Under discussion
-    - [ ] Once merged in development, leave comment for salil to test
-    - [ ] Address comments
-    - [ ] Merge & Deploy
+    - [x] `Workers assigned to the location should be listed first` Under discussion => Moved to icebox
+    - [x] Once merged in development, leave comment for salil to test
+    - [x] Address comments
+    - [x] Merge & Deploy
 - [ ] Develop/Fix
-  - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
+  - [x] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
+    - [x] Address review comments
   - [ ] Refactor `<Template/>` Component
-- [ ] Review Tiago PR ()
-- [ ] Update JIRA
+- [x] Review Tiago PR (7)
+- [x] Update JIRA
