--- a/2018/December/28.md
+++ b/2018/December/28.md
@@ -1,11 +1,19 @@
 #### Todos
 
-- Review Tiago PR
-- Update Jira
-- Develop and Fix
-  - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
+- [ ] Review Tiago PR
+- [ ] Update Jira
+- [ ] Develop and Fix
+  - [ ] Show clear button next to Date and Time form items
+    - [x] Address review comments
     - [ ] Merge & Deploy
     - [ ] QA Comments
-  - [ ] [file id for pdf form items is not showing along with form label](https://www.pivotaltracker.com/story/show/162861659)
-  - [ ] [form header section is not adjusting text appropriately ](https://www.pivotaltracker.com/story/show/162861065)
+  - [ ] Validate form after update
+    - [x] Merge & Deploy
+    - [ ] QA Comments
+  - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
+    - [x] Address review comments
+    - [ ] Merge & Deploy
+    - [ ] QA Comments
+  - [x] [file id for pdf form items is not showing along with form label](https://www.pivotaltracker.com/story/show/162861659)
+  - [x] [form header section is not adjusting text appropriately ](https://www.pivotaltracker.com/story/show/162861065)
   - [ ] Refactor <Template />
