--- a/2018/December/28.md
+++ b/2018/December/28.md
@@ -16,4 +16,4 @@
     - [ ] QA Comments
   - [x] [file id for pdf form items is not showing along with form label](https://www.pivotaltracker.com/story/show/162861659)
   - [x] [form header section is not adjusting text appropriately ](https://www.pivotaltracker.com/story/show/162861065)
-  - [ ] Refactor <Template />
+  - [ ] Refactor `<Template />` Component
