--- a/2018/December/28.md
+++ b/2018/December/28.md
@@ -5,15 +5,19 @@
 - [ ] Develop and Fix
   - [ ] Show clear button next to Date and Time form items
     - [x] Address review comments
-    - [ ] Merge & Deploy
+    - [x] Merge & Deploy
     - [ ] QA Comments
   - [ ] Validate form after update
     - [x] Merge & Deploy
     - [ ] QA Comments
   - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
     - [x] Address review comments
-    - [ ] Merge & Deploy
+    - [x] Merge & Deploy
     - [ ] QA Comments
   - [x] [file id for pdf form items is not showing along with form label](https://www.pivotaltracker.com/story/show/162861659)
+    - [x] Merge & Deploy
+    - [ ] QA Comments
   - [x] [form header section is not adjusting text appropriately ](https://www.pivotaltracker.com/story/show/162861065)
+    - [x] Merge & Deploy
+    - [ ] QA Comments
   - [ ] Refactor `<Template />` Component
