Prepare for standup

--- a/2019/Janurary/1.md
+++ b/2019/Janurary/1.md
@@ -1,5 +1,5 @@
-- [x] Review Tiago PR (1)
-- [x] Update Jira
+- [x] Review Tiago PR (0)
+- [ ] Update Jira
 - [ ] Develop and Fix
   - [ ] Show clear button next to Date and Time form items
     - [ ] QA Comments
@@ -12,3 +12,13 @@
   - [ ] [form header section is not adjusting text appropriately ](https://www.pivotaltracker.com/story/show/162861065)
     - [ ] QA Comments
   - [ ] Refactor `<Template />` Component
+    - [x] Validate form before submit
+    - [x] Submit Form, main image and signature
+    - [x] Update comment, error message, item value
+    - [x] Handle signature modal
+    - [x] Repeat Section
+    - [x] Update Card Title
+    - [x] Show success/error message
+    - [ ] Update utils test
+    - [ ] 'Submitted' Message / Readonly Form
+    - [ ] Send for code review
