--- a/2019/Janurary/1.md
+++ b/2019/Janurary/1.md
@@ -1,17 +1,15 @@
 - [x] Review Tiago PR (0)
 - [ ] Update Jira
 - [ ] Develop and Fix
-  - [ ] Show clear button next to Date and Time form items
-    - [ ] QA Comments
+  - [x] Show clear button next to Date and Time form items
+  - [x] [user can submit form with image item using `web forms`](https://www.pivotaltracker.com/story/show/162764412)
   - [ ] Validate form after update
     - [ ] QA Comments
   - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
     - [ ] QA Comments
-  - [ ] [file id for pdf form items is not showing along with form label](https://www.pivotaltracker.com/story/show/162861659)
-    - [ ] QA Comments
-  - [ ] [form header section is not adjusting text appropriately ](https://www.pivotaltracker.com/story/show/162861065)
-    - [ ] QA Comments
-  - [ ] Refactor `<Template />` Component
+  - [x] [file id for pdf form items is not showing along with form label](https://www.pivotaltracker.com/story/show/162861659)
+  - [x] [form header section is not adjusting text appropriately ](https://www.pivotaltracker.com/story/show/162861065)
+  - [x] Refactor `<Template />` Component
     - [x] Validate form before submit
     - [x] Submit Form, main image and signature
     - [x] Update comment, error message, item value
@@ -19,6 +17,9 @@
     - [x] Repeat Section
     - [x] Update Card Title
     - [x] Show success/error message
-    - [ ] Update utils test
-    - [ ] 'Submitted' Message / Readonly Form
-    - [ ] Send for code review
+    - [x] Update utils test
+      - [x] groups & items to objects
+      - [x] deserialize
+      - [x] specific object handling
+    - [x] 'Submitted' Message / Readonly Form
+    - [x] Send for code review
