prep for standup

--- a/2019/Janurary/2.md
+++ b/2019/Janurary/2.md
@@ -1,14 +1,24 @@
-- [ ] Review Tiago PR (0)
-- [ ] Update Jira
+- [x] Review Tiago PR (2)
+- [x] Update Jira
 - [ ] Develop and Fix
   - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
     - [ ] QA Comments
-  - [ ] [Worker list in select worker items is not sorted](https://www.pivotaltracker.com/story/show/162720254)
-    - [ ] QA Comments
-  - [ ] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
-    - [ ] QA Comments
-  - [ ] [model open have extra space at bottom](https://www.pivotaltracker.com/story/show/162900611)
+  - [x] [Worker list in select worker items is not sorted](https://www.pivotaltracker.com/story/show/162720254)
+    - [x] QA Comments
+  - [x] [Required fields must be validated before user can sign a form](https://www.pivotaltracker.com/story/show/162769148)
+    - [x] QA Comments
+    - [x] drop comment to move image in separate ticket and test rest.
+  - [x] [model open have extra space at bottom](https://www.pivotaltracker.com/story/show/162900611)
   - [ ] Refactor `<Template />` Component
-    - [ ] Review Comments
-    - [ ] Merge and deploy
+    - [x] Review Comments
+    - [x] Merge and deploy
     - [ ] QA Comments
+    - [x] Remove unsed code
+  - [ ] [Section is Repeatable](https://www.pivotaltracker.com/story/show/162653406)
+    - [x] Develop
+    - [x] Send for review
+    - [ ] Review comments
+    - [ ] Merge & Deploy
+    - [ ] QA Comments
+- [ ] Create phase 5 branch
+- [ ] Send Angelo Questions about earlier research
