--- a/2019/Janurary/2.md
+++ b/2019/Janurary/2.md
@@ -1,3 +1,4 @@
+#### ToDos
 - [x] Review Tiago PR (2)
 - [x] Update Jira
 - [ ] Develop and Fix
@@ -12,7 +13,7 @@
   - [ ] Refactor `<Template />` Component
     - [x] Review Comments
     - [x] Merge and deploy
-    - [ ] QA Comments
+    - [x] QA Comments
     - [x] Remove unsed code
   - [ ] [Section is Repeatable](https://www.pivotaltracker.com/story/show/162653406)
     - [x] Develop
@@ -20,5 +21,19 @@
     - [ ] Review comments
     - [ ] Merge & Deploy
     - [ ] QA Comments
-- [ ] Create phase 5 branch
-- [ ] Send Angelo Questions about earlier research
+- [x] Create phase 5 branch
+- [x] Send Angelo Questions about earlier research
+
+
+#### Just a follow up for Angelo
+- May be we can ask Tom to add a comment here https://www.pivotaltracker.com/story/show/159023672 to mention `Folder` is not part of this phase
+- Did we get the chance to validate https://docs.google.com/document/d/1bX_5x1-Cli_G0plaLZx9EkL2LiEmjjJi604M7tXQ8EA/edit
+      - `Done` button styles
+      - Invert button colors on the form and remove margin-top so it’s tighter to question
+- Some other small queries
+      - Should short answer have multiline?
+      - Radio buttons for single select
+      - Date field => show year
+      - What all validations are required for form fields
+- Do we need to validate form before signing form?
+- Do we need `Other` item at all levels to of hierarchy in list (https://www.pivotaltracker.com/story/show/162720284/comments/198000545)
