prep for standup

--- a/2019/Janurary/2.md
+++ b/2019/Janurary/2.md
@@ -1,7 +1,7 @@
 #### ToDos
 - [x] Review Tiago PR (2)
 - [x] Update Jira
-- [ ] Develop and Fix
+- [x] Develop and Fix
   - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
     - [ ] QA Comments
   - [x] [Worker list in select worker items is not sorted](https://www.pivotaltracker.com/story/show/162720254)
@@ -10,7 +10,7 @@
     - [x] QA Comments
     - [x] drop comment to move image in separate ticket and test rest.
   - [x] [model open have extra space at bottom](https://www.pivotaltracker.com/story/show/162900611)
-  - [ ] Refactor `<Template />` Component
+  - [x] Refactor `<Template />` Component
     - [x] Review Comments
     - [x] Merge and deploy
     - [x] QA Comments
