--- a/2019/Janurary/3.md
+++ b/2019/Janurary/3.md
@@ -4,8 +4,21 @@
 - [ ] Develop and Fix
   - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
     - [ ] QA Comments
+      - [x] fixes
+      - [ ] Code review comments
+      - [ ] Merge & deploy
+      - [ ] QA Comments
   - [ ] [Section is Repeatable](https://www.pivotaltracker.com/story/show/162653406)
-    - [ ] Review comments
-    - [ ] Merge & Deploy
+    - [x] Review comments
+    - [x] Merge to Phase 5
     - [ ] QA Comments
   - [x] Salil comment about logging in
+
+  Update
+  - Built Phase 5 repeatable and deletable sections
+  - Fixed QA comments on tickets tested like required form validation and worker list case-insensitive sorting
+  - Reviewed 2 Tiago PRs
+  - Waiting on merging
+  - Other option submitted fore review
+  - Salil comment on required form validation -> move to phase 7
+  - New bug from muhammad to delete sections its a separate feature
