Prep for call with Tiago

--- a/2019/Janurary/3.md
+++ b/2019/Janurary/3.md
@@ -1,20 +1,21 @@
 #### ToDos
-- [x] Review Tiago PR ( )
+- [x] Review Tiago PR (1)
 - [x] Update Jira
 - [ ] Develop and Fix
   - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
     - [ ] QA Comments
       - [x] fixes
-      - [ ] Code review comments
+      - [x] Code review comments
       - [ ] Merge & deploy
       - [ ] QA Comments
-  - [ ] [Section is Repeatable](https://www.pivotaltracker.com/story/show/162653406)
+  - [x] [Section is Repeatable](https://www.pivotaltracker.com/story/show/162653406)
     - [x] Review comments
     - [x] Merge to Phase 5
-    - [ ] QA Comments
+  - [ ] [User Signs Form For The First Time](https://www.pivotaltracker.com/story/show/162653536)
+    - [ ] Build
   - [x] Salil comment about logging in
 
-  Update
+ #### Update
   - Built Phase 5 repeatable and deletable sections
   - Fixed QA comments on tickets tested like required form validation and worker list case-insensitive sorting
   - Reviewed 2 Tiago PRs
@@ -22,3 +23,8 @@
   - Other option submitted fore review
   - Salil comment on required form validation -> move to phase 7
   - New bug from muhammad to delete sections its a separate feature
+
+#### User Signs Form For The First Time
+- [ ] Show name of user in popop (Wireframe)
+- [ ] No typed signature
+- [ ]
