--- a/2019/Janurary/4.md
+++ b/2019/Janurary/4.md
@@ -1,5 +1,5 @@
 #### ToDos
-- [x] Review Tiago PR (1)
+- [x] Review Tiago PR (2)
 - [x] Update Jira
 - [ ] Develop and Fix
   - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
@@ -8,21 +8,19 @@
       - [x] Code review comments
       - [ ] Merge & deploy
       - [ ] QA Comments
-  - [x] [Section is Repeatable](https://www.pivotaltracker.com/story/show/162653406)
-    - [x] Review comments
-    - [x] Merge to Phase 5
   - [ ] [User Signs Form For The First Time](https://www.pivotaltracker.com/story/show/162653536)
     - [ ] Build
-  - [x] Salil comment about logging in
 
 #### Update
-  - Built Phase 5 repeatable and deletable sections
-  - Fixed QA comments on tickets tested like required form validation and worker list case-insensitive sorting
-  - Reviewed 2 Tiago PRs
-  - Waiting on merging
-  - Other option submitted fore review
-  - Salil comment on required form validation -> move to phase 7
-  - New bug from muhammad to delete sections its a separate feature
+- Addresses review comments for `Other item in lists` task
+- Started on first task for phase 7 => User signs form for the first time
+- Had a call with Tiago, regarding improving code and fixing some mal-practices
+- Also discussed about how I am going to approach phase 7 first task
+- We need a call with Angelo to discuss about improvements of FE code, architecture and future plans
+- Reviewed 2 PRs for Tiago today morning
+- Focuss for today will be
+  - `Phase 7 new task/Refactoring old code` and any new bug that comes up
+
 
 #### User Signs Form For The First Time
 - [ ] Show name of user in popop (Wireframe)
