Prep for standup

--- a/2019/Janurary/4.md
+++ b/2019/Janurary/4.md
@@ -8,11 +8,19 @@
       - [x] Code review comments
       - [ ] Merge & deploy
       - [ ] QA Comments
+  - [ ] Make repeated section repeatable and apply limit on total.
+    - [ ] Fix
+    - [ ] Code review
+    - [ ] Merge & deploy
+    - [ ] QA Testing
+  - [ ] Merge Phase 5 to development and deploy for testing
   - [ ] [User Signs Form For The First Time](https://www.pivotaltracker.com/story/show/162653536)
     - [ ] Build
 
 #### Update
-- Addresses review comments for `Other item in lists` task
+- Addresses review comments for `Other item in lists` task. Waiting for review
+- Worked on making Repeated section repeatable and submitted the PR for review.
+- We will merge `Phase 5` today to `development` for QA testing
 - Started on first task for phase 7 => User signs form for the first time
 - Had a call with Tiago, regarding improving code and fixing some mal-practices
 - Also discussed about how I am going to approach phase 7 first task
