--- a/2019/Janurary/4.md
+++ b/2019/Janurary/4.md
@@ -18,14 +18,15 @@
     - [ ] Build
 
 #### Update
-- Addresses review comments for `Other item in lists` task. Waiting for review
-- Worked on making Repeated section repeatable and submitted the PR for review.
-- We will merge `Phase 5` today to `development` for QA testing
+- Yesterday, I addressed review comments for `Other item in lists` task. Waiting for review
 - Started on first task for phase 7 => User signs form for the first time
 - Had a call with Tiago, regarding improving code and fixing some mal-practices
 - Also discussed about how I am going to approach phase 7 first task
 - We need a call with Angelo to discuss about improvements of FE code, architecture and future plans
+
 - Reviewed 2 PRs for Tiago today morning
+- Today, I worked on making Repeated section repeatable and submitted the PR for review.
+- We will merge `Phase 5` today to `development` for QA testing
 - Focuss for today will be
   - `Phase 7 new task/Refactoring old code` and any new bug that comes up
 
