Prep for standup

--- a/2019/Janurary/5.md
+++ b/2019/Janurary/5.md
@@ -1,12 +1,12 @@
 #### ToDos
-- [x] Review Tiago PR (2)
+- [x] Review Tiago PR (1)
 - [x] Update Jira
 - [ ] Develop and Fix
   - [ ] [Support "Other" option in list items](https://www.pivotaltracker.com/story/show/162720284)
     - [ ] QA Comments
       - [x] fixes
       - [x] Code review comments
-      - [ ] Merge & deploy
+      - [x] Merge & deploy
       - [ ] QA Comments
   - [ ] Make repeated section repeatable and apply limit on total.
     - [x] Fix
@@ -18,17 +18,15 @@
     - [ ] Build
 
 #### Update
-- Yesterday, I addressed review comments for `Other item in lists` task. Waiting for review
-- Started on first task for phase 7 => User signs form for the first time
-- Had a call with Tiago, regarding improving code and fixing some mal-practices
-- Also discussed about how I am going to approach phase 7 first task
-- We need a call with Angelo to discuss about improvements of FE code, architecture and future plans
+- Last day I had a call with Angelo about code improvements
+- Prepared a list of improvements and working on making a roadmap for the same necessary
 
-- Reviewed 2 PRs for Tiago today morning
-- Today, I worked on making Repeated section repeatable and submitted the PR for review.
+- Fixed review comments for repeatable sections
+- Reviewed 1 PRs for Tiago today morning
 - We will merge `Phase 5` today to `development` for QA testing
 - Focuss for today will be
-  - `Phase 7 new task/Refactoring old code` and any new bug that comes up
+  - Road Map
+  - `Phase 7 - User signs form for the first time` and any new bug that comes up
 
 
 #### User Signs Form For The First Time
