Prep for standup

--- a/2019/Janurary/5.md
+++ b/2019/Janurary/5.md
@@ -10,10 +10,10 @@
       - [ ] QA Comments
   - [ ] Make repeated section repeatable and apply limit on total.
     - [x] Fix
-    - [ ] Code review
-    - [ ] Merge & deploy
+    - [x] Code review
+    - [x] Merge & deploy
     - [ ] QA Testing
-  - [ ] Merge Phase 5 to development and deploy for testing
+  - [x] Merge Phase 5 to development and deploy for testing
   - [ ] [User Signs Form For The First Time](https://www.pivotaltracker.com/story/show/162653536)
     - [ ] Build
 
@@ -31,7 +31,7 @@
 
 #### User Signs Form For The First Time
 - [x] Show name of user in popop (Wireframe)
-- [ ] No typed signature
+- [x] No typed signature
 - [ ] No Separate Submit Button
 - [ ] Readonly Form
 - [ ] Validate before signing form
