Prep for standup

--- a/2019/Janurary/6.md
+++ b/2019/Janurary/6.md
@@ -22,6 +22,7 @@
 - Fixed 2 bugs for `Repeatable/Collapsible section`
   - Required field validation for repeated sections
   - Option to add comments to form item
+- Now focus will be on finishing phase 7 task
 
 #### User Signs Form For The First Time
 - [x] Show name of user in popop (Wireframe)
