--- a/2019/Janurary/8.md
+++ b/2019/Janurary/8.md
@@ -3,8 +3,8 @@
 - [x] Update Jira
 - [ ] Develop and Fix
   - [x] [Clicking on the other option should not clear the text already entered.](https://www.pivotaltracker.com/story/show/163033257)
-  - [ ] [Cannot use the other option in certain scenarios.](https://www.pivotaltracker.com/story/show/163032667)
-  - [ ] [More than 1 value can be selected using the Select One list item.](https://www.pivotaltracker.com/story/show/163032558)
+  - [x] [Cannot use the other option in certain scenarios.](https://www.pivotaltracker.com/story/show/163032667)
+  - [x] [More than 1 value can be selected using the Select One list item.](https://www.pivotaltracker.com/story/show/163032558)
   - [ ] [Required fields are not validated in the repeated sections.](https://www.pivotaltracker.com/story/show/163039925)
   - [ ] [Option to add comments to form item not available in the repeated section](https://www.pivotaltracker.com/story/show/163039280)
   - [ ] [User Signs Form For The First Time](https://www.pivotaltracker.com/story/show/162653536)
@@ -23,6 +23,11 @@
   - Required field validation for repeated sections
   - Option to add comments to form item
 - Now focus will be on finishing phase 7 task
+
+
+- State restructure
+  - Image selectors
+  - details fixes
 
 #### User Signs Form For The First Time
 - [x] Show name of user in popop (Wireframe)
