--- a/2019/Janurary/14.md
+++ b/2019/Janurary/14.md
@@ -1,15 +1,15 @@
 #### ToDos
-- [ ] Review Tiago PR ()
+- [x] Review Tiago PR ()
 - [x] Update Jira
-- [ ] Hacker rank problem
-- [ ] Read more into React docs
+- [x] Hacker rank problem
+- [x] https://github.com/acdlite/react-fiber-architecture
 - [x] Deliver stories related repeated sections
-- [ ] Phase 7 new task
+- [ ] Image uploader refactoring
 - [x] Web form phase 12 doc
-  - [ ] If user can cancel from any point, then when to submit form?
-  - [ ] App is accessible without loginig  in
-- [ ] Sprint planning
-- [ ] Finance planning session
+  - [x] If user can cancel from any point, then when to submit form?
+  - [x] App is accessible without loginig  in
+- [x] Sprint planning
+- [x] Finance planning session
 
 #### Update - Morning
 - Delivered app crash bugs last day
