--- a/2019/Janurary/18.md
+++ b/2019/Janurary/18.md
@@ -1,6 +1,6 @@
 #### ToDos
-- [ ] Review Tiago PR ( )
-- [ ] Update Jira
+- [x] Review Tiago PR ( )
+- [x] Update Jira
 - [x] Hacker rank problem
 - [x] https://github.com/acdlite/react-fiber-architecture
 - [ ] Add Image Uploader to Signature Dialog
