Prepare for standup

--- a/2019/Janurary/18.md
+++ b/2019/Janurary/18.md
@@ -3,14 +3,14 @@
 - [x] Update Jira
 - [x] Hacker rank problem
 - [x] https://github.com/acdlite/react-fiber-architecture
-- [ ] Add Image Uploader to Signature Dialog
+- [x] Add Image Uploader to Signature Dialog
   - [x] Refactor Image Uplaoder
   - [x] Add Image uploader icon to signature dialog
   - [x] Question 
     - do we need feature to annotate photo
   - [x] only one file
-  - [ ] Camera API
-  - [ ] Submit PR
+  - [x] Camera API
+  - [x] Submit PR
 - [ ] Repeat section mockups
 
 #### Update - Morning
