--- a/2019/Janurary/21.md
+++ b/2019/Janurary/21.md
@@ -3,8 +3,14 @@
 - [x] Read React
 - [x] Figure out in which meetup you can speak for topic of state management or state structuring and send messages
 - [x] Blog about the website
-  - [ ] Fix blog categories 
-
-### Repeat Section
- - Find last replica section
-   - filter where connectingId is same, last in row
+  - [ ] Fix blog categories
+- [x] [signature modal is not registering a signature sometimes.](https://www.pivotaltracker.com/story/show/163266897)
+  - [x] Fix
+  - [x] Submit PR
+  - [x] Update JIRA
+- Signature Photo PR
+  - [x] Address PR comments
+  - [ ] Submit 
+- [ ] Unit Tests
+  - [ ] Actions
+  - [ ] APIs
