Prepare for standup

--- a/2019/Janurary/25.md
+++ b/2019/Janurary/25.md
@@ -1,12 +1,12 @@
 #### ToDos
-- [ ] Hacker rank problem
+- [x] Hacker rank problem
 - [ ] https://github.com/acdlite/react-fiber-architecture
 - [ ] Finish wordpress blog
 - [ ] Address comments from meetup
-- [ ] Unit Tests
-  - [ ] API
-- [ ] Review Tiago PR ( )
-- [ ] Update Jira
+- [x] Unit Tests
+  - [x] API
+- [x] Review Tiago PR (0)
+- [x] Update Jira
 
 #### Update - Morning
 
