--- a/2019/Janurary/28.md
+++ b/2019/Janurary/28.md
@@ -1,13 +1,13 @@
 #### ToDos
 - [x] Hacker rank problem
-- [ ] Unit Tests
-  - [ ] Containers
-- [ ] Address comments from meetup
+- [x] Unit Tests
+  - [x] Sample Containers
+- [ ] Create a doc with libalities in React Apps => Pretty print and organiser
+- [x] Address comments from meetup
 - [ ] Address comments from Ramda
 - [ ] https://github.com/acdlite/react-fiber-architecture
 - [ ] Read React Code
-- [ ] Sprint Planing
-- [ ] Create a doc with libalities in React Apps => Pretty print and organiser
+- [x] Sprint Planing
 
 #### Update - Morning 
 
