--- a/2019/Janurary/29.md
+++ b/2019/Janurary/29.md
@@ -1,12 +1,20 @@
 #### ToDos
-- [ ] Hacker rank problem
+- [x] Hacker rank problem
 - [ ] Address comments from Ramda
-- [ ] https://github.com/acdlite/react-fiber-architecture
-- [ ] Read React Code
-- [ ] Log Time in Jira
-- [ ] Logged in User can select alternate signatories
-- [ ] Questions to Angelo
-  - [ ] what about the time we spend on planing our day, going through emails and boards
+- [x] https://github.com/acdlite/react-fiber-architecture
+  - [ ] https://reactjs.org/docs/design-principles.html#stability
+- [x] Log Time in Jira
+   - [x] Log yesterday time
+    - [x] Unit tests - 4h
+    - [x] Daily Meeting - 0.5h
+    - [x] Libalities - 1h 45m
+    - [x] Sprint meeting - 1h 45m
+   - [x] Today
+    - [x] Alternate Signatories 4h 10m (5:00 PM)
+    - [x] Daily Meeting - 1h
+- [x] Logged in User can select alternate signatories
+- [x] Questions to Angelo
+  - [x] what about the time we spend on planing our day, going through emails and boards
 
 #### Update - Morning 
 
