--- a/2019/Janurary/31.md
+++ b/2019/Janurary/31.md
@@ -3,13 +3,13 @@
 - [ ] Address comments from Ramda
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#stability
-- [ ] Log Time in Jira
-   - [ ] Daily Meeting
-   - [ ] Scrum
+- [x] Log Time in Jira
+   - [x] Daily Meeting
+   - [x] Scrum
    - [ ] Task
-- [ ] Logged in User can select alternate signatories
-    - [ ] Refactoring
-    - [ ] Workers Sorting
+- [x] Logged in User can select alternate signatories
+    - [x] Refactoring
+    - [x] Workers Sorting
     - [ ] Connecting Models
 - [ ] Address Tui Image editor comment
 
