--- a/2019/February/5.md
+++ b/2019/February/5.md
@@ -1,16 +1,20 @@
 #### ToDos
-- [ ] Hacker rank problem (15m)
+- [x] Hacker rank problem (15m)
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#stability (15m)
-- [ ] Address PR Comments
-   - [ ] Unit Tests - 5m
-   - [ ] Image Modal - 30m
-   - [ ] Alternate Signatories - 1h
-- [ ] Save and Add Another
+- [x] Address PR Comments
+   - [x] Unit Tests - 5m
+   - [x] Image Modal - 30m
+   - [x] Alternate Signatories - 1h
+      - [ ] Hide signatures only for select signatories (10m)
+- [x] Save and Add Another
    - Change UI of signature modal (2h)
    - Separate Add signature logic from form submission (6h)
    - Complete Flow (2h)
+- [x] Review Tiago PR (1) (1m)
 - [ ] Log Time in Jira
+   - Daily Meeting (1h 20m)
+   - Srum ()
 
 #### Update - Morning 
 
@@ -20,3 +24,19 @@
 - [ ] Address comments from Ramda (2hr)
 - [ ] Finish website blog(2hr)
 - [ ] Read react code (2hr)
+
+
+### Save and add another
+- saving second signature shouldn't save form
+   - when we save first time => save form, then submit signature
+      - send signature data as well in form submit
+   - when we add second time and beyond => it should only submit signature
+      - call submit signature saga
+   - ADD_TEMPLATE_SIGNATURE
+      - send signature, formId and project Id
+      - make api call
+      - on success add it to list
+
+- modal shouldn't close
+- step => Select Employees
+- handle form success message properly
