--- a/2019/February/13.md
+++ b/2019/February/13.md
@@ -2,10 +2,21 @@
 - [ ] Hacker rank problem (30m)
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#interoperability (20m)
-- [x] images added to signatures are lost
-- [x]	template forms are not appearing as per location specific assigned.
-- [x] Can change location on a signed form.
-- [x] Getting wrong (incorrect login credentials) error when tried to login without internet access
+- [x] Address PR Comments
+- [ ] Address bugs
+- [x] Review Tiago PR (5)
+- [x] Log Time in Jira
+   - Day Planing (20m)
+   - Srum ()
+
+#### Update - Morning 
+
+### Update - Evening
+
+### Backlog
+- [ ] Finish website blog(2hr)
+- [ ] Read react code (2hr)
+- [ ] Address comments from Ramda (2hr)
 - [ ] Add unit tests
    - [ ] sagas
       - [ ] index (1,15,16)
@@ -21,16 +32,3 @@
       - [ ] Pages
       - [ ] Shared
       - [ ] Template
-- [ ] Review Tiago PR (4)
-- [ ] Log Time in Jira
-   - Day Planing ()
-   - Srum (20m)
-
-#### Update - Morning 
-
-### Update - Evening
-
-### Backlog
-- [ ] Finish website blog(2hr)
-- [ ] Read react code (2hr)
-- [ ] Address comments from Ramda (2hr)
