--- a/2019/February/16.md
+++ b/2019/February/16.md
@@ -1,11 +1,9 @@
 #### ToDos
-- [x] Hacker rank problem ( )
+- [ ] Hacker rank problem ( )
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#interoperability (20m)
-- [x] Address PR Comments ( )
-- [x] Shared Sign Task
-- [x] Review Tiago PR( )
-- [x] Log Time in Jira
+- [ ] Shared Sign Task
+- [ ] Log Time in Jira
    - Day Planing ( )
    - Srum ()
 
