--- a/2019/February/17.md
+++ b/2019/February/17.md
@@ -2,9 +2,13 @@
 - [ ] Hacker rank problem ( )
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#interoperability (20m)
-- [x] Shared Sign Task
+- [ ] Shared Sign Task
+   - [ ] Connect with samir
 - [ ] Find new Image editing library
+   - [ ] Status summarize
+- [ ] Unit Tests
 - [ ] Log Time in Jira
+   - Log previous day time
    - Day Planing ( )
    - Srum ()
 
