--- a/2019/February/18.md
+++ b/2019/February/18.md
@@ -8,15 +8,42 @@
    - [ ] Status summarize
 - [ ] Unit Tests
 - [ ] Log Time in Jira
-   - Log previous day time
+   - [x] Log previous day time
    - Day Planing ( )
    - Srum ()
 
+- Plan day
+   - Meals 
+      10 - BF
+      12 - Coffee & peanuts
+      2 - Lunch
+      4 - Sweet
+      6 - Paranth
+      8 - dinner
+   - Vedi
+      - 11, 1, 3, 5, 7
+   - call natraj
+   - order pampers
+   - order body wash
+
+
 #### Update - Morning 
+- Worked on 
+   - Shared sign epic - pagination and sorting, api returning no data
+   - Spent time on finding image annotation library
+   - Continued working on tests
+- blocked in
+   - Can change location on a signed form. => decision pending
+   - Shared sign epic - API changes required
 
 ### Update - Evening
 
 ### Image Editor Lib
+- Summary
+    - Available libraries
+    - Different interfaces
+    - Different public APIs
+    - Changing will need time of approx 2 days and a full regression of the image annotation feature
 - Features Needed
    - Undo, Redo, Reset Changes
    - Delete, Delete All changes
@@ -40,6 +67,7 @@
 - Options
    - https://annotorious.github.io/
    - marker.js
+   - fabric.js
    - https://github.com/CrowdCurio/image-annotator
    - https://djaodjin.com/blog/jquery-plugin-to-annotate-images.blog.html
 
