--- a/2019/February/19.md
+++ b/2019/February/19.md
@@ -2,14 +2,14 @@
 - [ ] Hacker rank problem ( )
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#interoperability (20m)
-- [ ] Shared Sign Task
-   - [ ] Connect with samir
-- [ ] Find new Image editing library
-   - [ ] Meeting with Tiago
-- [ ] Connect with muhammed for wrong login error task
-- [ ] Unit Tests
-- [ ] Address PR Comments
-- [ ] Review Tiago PR
+- [x] Shared Sign Task
+   - [x] Connect with samir
+   - [x] Fix API
+- [x] Find new Image editing library
+   - [x] Meeting with Tiago
+- [x] Connect with muhammed for wrong login error task
+- [x] Address PR Comments
+- [x] Review Tiago PR
 - [ ] Log Time in Jira
    - Day Planing ( )
    - Srum ()
@@ -18,17 +18,10 @@
    - Office 
       - 12:50 - 8:50 - 8h
       - 10:30 - 11:00 - 30m
-   - Meals 
-      11 - BF
-      1 - Lunch
-      3 - Sweet
-      5 - Milk
-      7 - Dinner
+   - Tasks
+      8:30 - Guggu Khichdi
+      9:00 - Sponge
       9:30 - Milk
-   - Vedi
-      - 12, 2, 4, 6, 8
-   - Set Room
-   - Bath
    - Call trainer
    - Buy gadgets
 
