--- a/2019/February/22.md
+++ b/2019/February/22.md
@@ -3,35 +3,27 @@
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#interoperability (20m)
 - [ ] Shared Sign Task
-   - [ ] Floating Button
+   - [x] Floating Button
    - [x] Show time date
    - [x] Sameer changes
-   - [ ] Material UI Warnings
-   - [ ] Change of location takes to FORMS_MENU
+   - [x] Material UI Warnings
+   - [x] Change of location takes to FORMS_MENU
    - [ ] Unit Tests
-   - [ ] Create PR
-- [ ] Address PR Comments
-- [ ] https://sitedocsdev.atlassian.net/browse/DEV-1713
-- [ ] Review Tiago PR (2)
+   - [x] Create PR
+- [x] Address PR Comments
+- [x] https://sitedocsdev.atlassian.net/browse/DEV-1713
+- [x] Review Tiago PR (2)
 - [x] Log Time in Jira
    - Day Planing ( )
    - Srum ()
 
 - Plan day
    - Office 
-      - 12:40 - 8:40
-      - 10:30 - 12:30
+      - 1:00 - 7:00
    - Tasks
-      6:30 - Parantha + diaper change + tomatoe puree
-      8:00 - Dinner
-      8:15 - Rice
-      8:40 - 9:00 - Meditate & Visualize
-      9 - 10 - Relax
-      10:00 - Sponge and diaper change
-   - Trip
-   - Tickets &B call ketan
+      - 8:00 - khchdi
+      - 9:00 - sponge
    - Make Weekend lists
-   - Bring papa laptop
 
 #### Update - Morning 
 - Worked on 
