--- a/2019/February/24.md
+++ b/2019/February/24.md
@@ -3,35 +3,29 @@
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#interoperability (20m)
 - [ ] Shared Sign Task
-   - [ ] Floating Button
-   - [x] Show time date
-   - [x] Sameer changes
-   - [ ] Material UI Warnings
-   - [ ] Change of location takes to FORMS_MENU
    - [ ] Unit Tests
-   - [ ] Create PR
 - [ ] Address PR Comments
-- [ ] https://sitedocsdev.atlassian.net/browse/DEV-1713
-- [ ] Review Tiago PR (2)
-- [x] Log Time in Jira
+- [ ] Log Time in Jira
    - Day Planing ( )
    - Srum ()
 
 - Plan day
    - Office 
-      - 12:40 - 8:40
-      - 10:30 - 12:30
+      - 11:00 - 7:00
+      - 10:00 - 12:00
    - Tasks
-      6:30 - Parantha + diaper change + tomatoe puree
-      8:00 - Dinner
-      8:15 - Rice
-      8:40 - 9:00 - Meditate & Visualize
-      9 - 10 - Relax
-      10:00 - Sponge and diaper change
-   - Trip
-   - Tickets &B call ketan
-   - Make Weekend lists
-   - Bring papa laptop
+      - 11:30 - Dal
+      - 12:30 - Coffee + peanuts
+      - 1:30 - Apple
+      - 2:30 - diaper change + Lunch
+      - 3:30 - Soup
+      - 4:00 - Iron
+      - 4:30 - Sweet
+      - 5:30 - Mashed potatoe + diaper change
+      - 6:30 - Milk
+      - 7:30 - Rice
+      - 8:00 - Diaper change + Dinner
+      - 10:30 - Sponge
 
 #### Update - Morning 
 - Worked on 
