--- a/2019/February/23.md
+++ b/2019/February/23.md
@@ -3,35 +3,22 @@
 - [ ] https://github.com/acdlite/react-fiber-architecture
   - [ ] https://reactjs.org/docs/design-principles.html#interoperability (20m)
 - [ ] Shared Sign Task
-   - [ ] Floating Button
-   - [x] Show time date
-   - [x] Sameer changes
-   - [ ] Material UI Warnings
-   - [ ] Change of location takes to FORMS_MENU
    - [ ] Unit Tests
-   - [ ] Create PR
 - [ ] Address PR Comments
-- [ ] https://sitedocsdev.atlassian.net/browse/DEV-1713
-- [ ] Review Tiago PR (2)
-- [x] Log Time in Jira
+- [ ] Costing documents
+- [ ] Log Time in Jira
    - Day Planing ( )
    - Srum ()
 
 - Plan day
    - Office 
-      - 12:40 - 8:40
-      - 10:30 - 12:30
+      - 10:40 - 8:20
+      - 10:30 - 12:00
    - Tasks
-      6:30 - Parantha + diaper change + tomatoe puree
-      8:00 - Dinner
-      8:15 - Rice
-      8:40 - 9:00 - Meditate & Visualize
-      9 - 10 - Relax
-      10:00 - Sponge and diaper change
-   - Trip
-   - Tickets &B call ketan
-   - Make Weekend lists
-   - Bring papa laptop
+      - 6:30 - diaper change + Mashed potatoe
+      - 7:00 - Dinner
+      - 8:30 - Soup
+      - 9:30 - sponge
 
 #### Update - Morning 
 - Worked on 
